2006-10-27  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix EXTRA_DIST.
	* Makefile.am (EXTRA_DIST): Fix.

2006-10-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add a sample test to show how to use the test-suite.
	* tests/testme.stdout: New.
	* tests/testme.cc: New.
	* tests/Makefile.am: Add a sample test.
	* Makefile.am (EXTRA_DIST): Complete.

2006-10-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Be silent by default.
	* tests/test.sh: Remove the SILENT "option". Now the env var VERBOSE
          must be set (and non empty) in order to display the output of the
          test.

2006-10-18  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	r65: Fix Makefile.am

	* Makefile.am (EXTRA_DIST): Use `+=' because EXTRA_DIST is already
          defined in build-aux/build-aux.mk.

2006-10-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	r54: Include build-aux.mk

	* Makefile.am: include build-aux/build-aux.mk.

2006-10-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	r53: Forward the bootstrap process in build-aux.

	* bootstrap: exec build-aux/bootstrap.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Add libport.
	* libport: New.
	* build-aux/svn-externals: Know it.
	* build-aux/build-aux.mk: Know it.

2006-10-16  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	r40: Add AutoTroll.

	* gui: New.
	* gui/Makefile.am: New. Demo of AutoTroll.
	* gui/lcdrange.cpp: New.
	* gui/lcdrange.h: New.
	* gui/main.cc: New.
	* gui/qt_main.cpp: New.

	* build-aux/autotroll.mk: New.
	* build-aux/autotroll.m4: New.
	* tests/test.sh: Enhance self-documentation.
	* configure.ac: Don't look for a C compiler by default. Use AutoTroll.
	* Makefile.am (ACLOCAL_AMFLAGS): New.
          (SUBDIRS): Add gui/.

2006-10-15  Akim Demaille  <akim@lrde.epita.fr>

	Import build-aux.
	* build-aux: New.
	* build-aux/urbi-prog-cxx.m4: Look for -Wextra and -Weffc++.
	* build-aux/svn-externals: Adjust the location of build-aux.
	* configure.ac: Use URBI macros.
